[Web Payments] Explicitly move SheetView

BUG=717612

Review-Url: https://codereview.chromium.org/2853373003
Cr-Commit-Position: refs/heads/master@{#468723}

Former-commit-id: bf16ab86c8929ad72134db3d09bd3681e70bd9e9